add query result display logic

--- a/styles/globals.css
+++ b/styles/globals.css
@@ -18,3 +18,11 @@ a {
 * {
   box-sizing: border-box;
 }
+
+.ReactVirtualized__Table__headerRow {
+  display: flex
+}
+
+.ReactVirtualized__Table__row {
+  display: flex
+}
